# lab05

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: CI.yml  main.yml
.github/рабочие процессы/: main.yml
banking/: Account.h  CMakeLists.txt  Transaction.cpp
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
